@@ -46,6 +46,22 @@ heartbeat.monitors:
   # Waiting duration until another ICMP Echo Request is emitted.
   wait: 1s
 
+  # The tags of the monitors are included in their own field with each
+  # transaction published. Tags make it easy to group servers by different
+  # logical properties.
+  #tags: ["service-X", "web-tier"]
+
+  # Optional fields that you can specify to add additional information to the
+  # monitor output. Fields can be scalar values, arrays, dictionaries, or any nested
+  # combination of these.
+  #fields:
+  #  env: staging
+
+  # If this option is set to true, the custom fields are stored as top-level
+  # fields in the output document instead of being grouped under a fields
+  # sub-dictionary. Default is false.
+  #fields_under_root: false
+
 - type: tcp # monitor type `tcp`. Connect via TCP and optionally verify endpoint
             # by sending/receiving a custom payload
 
@@ -64,8 +80,8 @@ heartbeat.monitors:
   #       Requires ports configs to be checked. If ssl is configured,
   #       a SSL/TLS based connection will be established. Otherwise plain tcp connection
   #       will be established
-  #   - hostname + port like `localhost:12345`:  
-  #       Connect to port on given host. If ssl is configured, 
+  #   - hostname + port like `localhost:12345`:
+  #       Connect to port on given host. If ssl is configured,
   #       a SSL/TLS based connection will be established. Otherwise plain tcp connection
   #       will be established
   #   - full url syntax. `scheme://<host>:[port]`. The `<scheme>` can be one of
